<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Teixugos Celestes</string>
    <string name="todo">TODO</string>
    <string name="anhadir_penhista">Añadir Peñista</string>
    <string name="nuevo_penhista">Nuevo Peñista</string>
    <string name="ultimas_noticias">Últimas Noticias</string>
    <string name="modificar_datos">Modificar Datos</string>
    <string name="eliminar_penhista">Eliminar Peñista</string>
    <string name="datos_personales">Datos Personales</string>
    <string name="bt_registrar">Registrar</string>
    <string name="bt_acceder">Acceder</string>
    <string name="tv_login">Login</string>
    <string name="titulo_registrar">Registrar</string>
    <string name="tv_nombre">Nombre</string>
    <string name="tv_primer_apellido">Primer Apellido</string>
    <string name="tv_segundo_apellido">Segundo Apellido</string>
    <string name="tv_telefono">Teléfono</string>
    <string name="tv_fecha_nacimiento">Fecha Nacimiento</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="tv_repetir_password">Repetir Password</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_registrar">Registrar</string>
    <string name="bt_cerrar">Cerrar Sesion</string>
    <string name="tv_cerrar_sesion">Cerrar Sesión</string>
    <string name="tv_pantalla_de_perfil_usuario">Perfil Usuario</string>
    <string name="tv_Bienvenida">Bienvenido a la app de los Teixugos Celestes</string>
    <string name="title_activity_navigation_drawer">ActivityNavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Peña Teixugos Celestes</string>
    <string name="nav_header_subtitle">teixugoscelestes@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tv_titulo_num_socio">Socio</string>
    <string name="tv_titulo_email">Email</string>
    <string name="tv_editar_datos">Editar Datos</string>
    <string name="tv_ejemploEmail">ejemplo@ejemplo.com</string>
    <string name="bt_aceptar_perfil">Aceptar</string>
    <string name="tv_num_tel">666666666</string>
    <string name="tv_second_name">Second Name</string>
    <string name="tv_first_name">First Name</string>
    <string name="tv_name">Name</string>
    <string name="tv_num_socio">11111</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_fechaNaci">01 Enero de 2021</string>
</resources>