<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/accionAnhadirNuevo"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/nuevo_penhista" />


    <item
        android:id="@+id/accionUltimasNoticias"
        android:title="@string/ultimas_noticias" />
    <item
        android:id="@+id/accionModificar"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/modificar_datos" />
    <item
        android:id="@+id/accionEliminar"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/eliminar_penhista" />
    <item
        android:id="@+id/accionDatosPersonales"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/datos_personales" />
</menu>