<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Registro_Firbase">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_tituloRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/uncial_antiqua"
            android:text="@string/titulo_registrar"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#020202"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_nombre2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/uncial_antiqua"
            android:text="@string/tv_nombre"
            android:textColor="#020202"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/amaranth"
            android:inputType="textPersonName"
            android:textColor="#2979FF"
            android:textSize="16sp"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/uncial_antiqua"
            android:text="@string/tv_email"
            android:textColor="#020202"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_email_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/amaranth"
            android:inputType="textEmailAddress"
            android:textColor="#2979FF"
            android:textSize="16sp"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/uncial_antiqua"
            android:text="@string/tv_password"
            android:textColor="#020202"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_PasswordRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/amaranth"
            android:inputType="textPassword"
            android:textColor="#2979FF"
            android:textSize="16sp"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                android:backgroundTint="#FF1744"
                android:fontFamily="@font/amaranth"
                android:text="@string/btn_cancelar"
                android:textColor="#020202"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/bt_registrar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_weight="1"
                android:backgroundTint="#00E676"
                android:fontFamily="@font/amaranth"
                android:text="@string/btn_registrar"
                android:textColor="#020202"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>