<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uncial_antiqua"
            android:text="@string/tv_login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#020202"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uncial_antiqua"
            android:text="@string/tv_email"
            android:textColor="#020202"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/amaranth"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="#2979FF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uncial_antiqua"
            android:text="@string/tv_password"
            android:textAllCaps="false"
            android:textColor="#020202"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/amaranth"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="#2979FF"
            android:textSize="16sp"
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:backgroundTint="#FF1744"
                android:fontFamily="@font/amaranth"
                android:onClick="OnClickRegistrar"
                android:text="@string/bt_registrar"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_acceder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_weight="1"
                android:backgroundTint="#00E676"
                android:fontFamily="@font/amaranth"
                android:onClick="OnClickAcceder"
                android:text="@string/bt_acceder"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>