<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_cerrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ActivityCerrarSesion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_cerrar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/uncial_antiqua"
            android:text="@string/tv_cerrar_sesion"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#020202"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_titulo_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uncial_antiqua"
            android:text="@string/tv_nombre"
            android:textColor="#020202"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_nombre_cerrar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/amaranth"
            android:textColor="#020202"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_titulo_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uncial_antiqua"
            android:text="@string/tv_email"
            android:textColor="#020202"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_email_cerrara_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/amaranth"
            android:textColor="#020202"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cerrar_sesion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FF1744"
                android:fontFamily="@font/amaranth"
                android:text="@string/bt_cerrar"
                android:textColor="#020202"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>